@startuml
'skinparam monochrome true
skinparam packageStyle rectangle
skinparam shadowing false
skinparam linetype polyline

package ui.funcionalidades {
    class MondaRegisterUI {
        - controller: MondaRegisterController
        - controllerop: OperacaoAgricolaRegisterController
        --
        + MondaRegisterUI()
        + run(): void
    }
}

package controller {
    class MondaRegisterController {
        - mondaRegister(operacaoId: int, parcelaId: int, variedadeId: int, fatorProducaoId: int, metodoExecucaoId: int, quantidade: float): void
    }

    class OperacaoAgricolaRegisterController {
        - getNextId(): int
        - getTableData(tableName: String): void
        - printTableData(tableName: String): void
        - isIdValid(tableName: String, id: int): boolean
        + operacaoAgricolaRegister(operacaoId: int, date: Date): void
    }
}

package ui.utils {
    class Utils {
        + readIntegerFromConsole(prompt: String): int
        + readFloatFromConsole(prompt: String): float
    }
}

class MondaRegisterUI {
    - controller: MondaRegisterController
    - controllerop: OperacaoAgricolaRegisterController
    --
    + MondaRegisterUI() : void
    + run(): void
}

class MondaRegisterController {
    - mondaRegister(operacaoId: int, parcelaId: int, variedadeId: int, fatorProducaoId: int, metodoExecucaoId: int, quantidade: float): void
}

class OperacaoAgricolaRegisterController {
    - getNextId(): int
    - getTableData(tableName: String): void
    - printTableData(tableName: String): void
    - isIdValid(tableName: String, id: int): boolean
    + operacaoAgricolaRegister(operacaoId: int, date: Date): void
}

class Utils {
    + readIntegerFromConsole(prompt: String): int
    + readFloatFromConsole(prompt: String): float
}
MondaRegisterUI --> MondaRegisterController
MondaRegisterUI --> OperacaoAgricolaRegisterController
MondaRegisterController --> OperacaoAgricolaRegisterController
MondaRegisterUI --> Utils
@enduml
